--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.12.0",
+    "aksharamukha>=2.3",
     "bitsandbytes>=0.48.2",
     "ipykernel>=7.1.0",
     "pandas>=2.3.3",
